WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77421
Parent SVGFontFaceElements style declaration to the rule
https://bugs.webkit.org/show_bug.cgi?id=77421
Summary
Parent SVGFontFaceElements style declaration to the rule
Antti Koivisto
Reported
2012-01-31 03:34:49 PST
For some reason the declaration is parented to the element which adds bunch of unnecessary special case code.
Attachments
patch
(5.68 KB, patch)
2012-01-31 03:43 PST
,
Antti Koivisto
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2012-01-31 03:43:20 PST
Created
attachment 124702
[details]
patch
WebKit Review Bot
Comment 2
2012-01-31 03:45:30 PST
Attachment 124702
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit']" exit_code: 9 Updating OpenSource First, rewinding head to replay your work on top of it... Applying: Fix compilation errors on build-webkit --debug --no-workers on mac. Using index info to reconstruct a base tree... Falling back to patching base and 3-way merge... Auto-merging LayoutTests/ChangeLog CONFLICT (content): Merge conflict in LayoutTests/ChangeLog Auto-merging LayoutTests/platform/qt/Skipped CONFLICT (content): Merge conflict in LayoutTests/platform/qt/Skipped Auto-merging Source/WebCore/ChangeLog CONFLICT (content): Merge conflict in Source/WebCore/ChangeLog Failed to merge in the changes. Patch failed at 0001 Fix compilation errors on build-webkit --debug --no-workers on mac. When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 164. If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Roben (:aroben)
Comment 3
2012-01-31 06:52:28 PST
Comment on
attachment 124702
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=124702&action=review
> Source/WebCore/css/CSSFontFaceRule.cpp:36 > - // FIXME: SVGFontFaceElement's style declaration should probably be parented to the rule too. > - if (m_style && !m_style->isElementStyleDeclaration()) > - m_style->clearParentRule(); > + m_style->clearParentRule();
Why do we now know m_style cannot be null? You should explain in the ChangeLog.
Antti Koivisto
Comment 4
2012-01-31 07:00:03 PST
http://trac.webkit.org/changeset/106358
I put back the null test. While that shouldn't really happen, that change is better done separately.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug